kubernetes/manifests/namespace-webapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: weather
spec: {}
status: {}
