kubernetes/manifests/deploy-webapp.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-webapp
  namespace: weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-webapp
  template:
    metadata:
      labels:
        app: weather-webapp
    spec:
      serviceAccountName: default
      containers:
        - name: weather-webapp
          image: nsvijay04b1/weather-demoapp:latest
          imagePullPolicy: Always
          
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP

          resources:
            limits:
              cpu: "0.3"
              memory: "256Mi"
            requests:
              cpu: "0.1"
              memory: "100Mi"
