kubernetes/manifests/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: weather
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: weather-nginx
