kubernetes/manifests/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-webapp-service
  namespace: weather
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5001
      protocol: TCP
      name: http
  selector:
    app: weather-webapp
