kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: weather-webapp-ingress
  namespace: weather
spec:
  rules:
    - host: weather.k8s.cloudnative.corp.github.com
      http:
        paths:
          - path: /
            backend:
              serviceName: weather-webapp-service
              servicePort: 80
